--- a/style.css
+++ b/style.css
@@ -2,9 +2,16 @@
   margin: 0 auto;
   width: 100%;
   max-width: 1600px;
-  text-align: center;
 }
 .divBtns {
   margin-top: 15px;
   margin-bottom: 15px;
+}
+.langFiltr {
+  display: inline-block;
+  width: 150px;
+  height: 40px;
+  border: 2px solid grey;
+  background-color: white;
+  margin: 2px;
 }
